--- a/WEB _AV1/AV2/ifpi.html
+++ b/WEB _AV1/AV2/ifpi.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>IFPI - Instituto Federal do Piauí</title>
+    <link rel="stylesheet" href="ifpi.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="img/logo_ifpi.png" alt="Logo IFPI">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="noticias.html">Notícias</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
     
+    <section class="banner">
+        <h1>Bem-vindo ao Instituto Federal do Piauí</h1>
+        <p>Excelência em ensino, pesquisa e extensão</p>
+    </section>
+    
+    <section class="info">
+        <div class="box">
+            <h2>Cursos</h2>
+            <p>Conheça os diversos cursos oferecidos pelo IFPI.</p>
+            <a href="cursos.html" class="btn">Saiba mais</a>
+        </div>
+        <div class="box">
+            <h2>Notícias</h2>
+            <p>Acompanhe as últimas notícias e eventos do IFPI.</p>
+            <a href="noticias.html" class="btn">Saiba mais</a>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Instituto Federal do Piauí - Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
