--- a/WEB/AV2/cursos.html
+++ b/WEB/AV2/cursos.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
-                <li><a href="noticias.html">Notícias</a></li>
+                <li><a href="suap.html">SUAP</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
@@ -43,7 +43,7 @@
             <li>Para saber mais acesse a página de <a href="https://www.ifpi.edu.br/catalogo-de-cursos/cursos-superiores">cursos superiores</a></li>
         </ul>
     </section>
-
+    
     <section>
         <h3>Cursos Técnicos</h3>
         <ul>
