--- a/WEB/AV2/sobre.html
+++ b/WEB/AV2/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IFPI - Instituto Federal do Piauí</title>
+    <title>IFPI - Sobre</title>
     <link rel="stylesheet" href="ifpi.css">
 </head>
 
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
-                <li><a href="noticias.html">Notícias</a></li>
+                <li><a href="suap.html">SUAP</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
@@ -25,15 +25,20 @@
     </header>
 
     <section class="banner">
-        <h2>Esses são os cursos da Área de Tecnologia oferecidos pelo Instituto Federal do Piauí</h2>
+        <h2>Essas são as localizações dos Instituos Federais encontrados no Estado do Piauí</h2>
     </section>
 
     <section>
-        <ul>
-            <li>Análise e Desenvolvimento de Sistemas</li>
-            <li></li>
-            <li></li>
-        </ul>
+        <h4><u>Reitoria</u></h3>
+            <p><strong>Endereço: </strong>Avenida Presidente Jânio Quadros, 330, 64053-390, Santa Isabel, Teresina (PI).
+            </p>
+            <p><strong>Horário de funcionamento: </strong> das 8h às 12h e das 14h às 18h, de segunda a sexta-feira.</p>
+            <h4><u>Campi</u></h3>
+                <p><strong>Nossos Campi: </strong>O Instituto Federal do Piauí é uma instituição de educação superior,
+                    básica e profissional, pluricurricular e multicampi e descentralizada. Tem como sedes, para os fins
+                    da legislação educacional, as seguintes unidades:</p>
+                <img src="https://www.ifpi.edu.br/a-instituicao/campi/campi/@@collective.cover.banner/a3e9c4fd-4a55-44e3-9303-0f321a78c9c6/@@images/32fdc285-3615-42bb-b3b8-b54c607a09d8.png"
+                    alt="Campi IFPI">
     </section>
 
     <footer>
