--- a/WEB/AV2/cursos.html
+++ b/WEB/AV2/cursos.html
@@ -24,40 +24,44 @@
         </nav>
     </header>
 
+
     <section class="banner">
         <h2>Esses são os cursos da Área de Tecnologia oferecidos pelo Instituto Federal do Piauí</h2>
         <br>
         <h4>Cursos encontrados no Campus Teresina Central</h4>
     </section>
 
-    <section>
-        <h3>Cursos Superiores</h3>
-        <ul>
-            <li>Alimentos</li>
-            <li>Análise e Desenvolvimento de Sistemas</li>
-            <li>Geoprocessamento</li>
-            <li>Gestão Ambiental</li>
-            <li>Gestão de Recursos Humanos</li>
-            <li>Radiologia</li>
-            <li>Secretariado</li>
-            <li>Para saber mais acesse a página de <a href="https://www.ifpi.edu.br/catalogo-de-cursos/cursos-superiores">cursos superiores</a></li>
-        </ul>
-    </section>
-    
-    <section>
-        <h3>Cursos Técnicos</h3>
-        <ul>
-            <li>Técnico em Administração</li>
-            <li>Técnico em Desenvolvimento de Sistemas</li>
-            <li>Técnico em Eletrotécnica</li>
-            <li>Técnico em Eletrônica</li>
-            <li>Técnico em Informática</li>
-            <li>Técnico em Refrigeração e Climatização</li>
-            <li>Técnico em Sistemas de Energia Renovável</li>
-            <li>Para saber mais acesse a página de <a href="https://www.ifpi.edu.br/catalogo-de-cursos/cursos-tecnicos">cursos técnicos</a></li>
-        </ul>
-    </section>
+    <div class="tipo_cursos">
+        <section>
+            <h3>Cursos Superiores</h3>
+            <ul>
+                <li>Alimentos</li>
+                <li>Análise e Desenvolvimento de Sistemas</li>
+                <li>Geoprocessamento</li>
+                <li>Gestão Ambiental</li>
+                <li>Gestão de Recursos Humanos</li>
+                <li>Radiologia</li>
+                <li>Secretariado</li>
+                <li>Para saber mais acesse a página de <a
+                        href="https://www.ifpi.edu.br/catalogo-de-cursos/cursos-superiores">cursos superiores</a></li>
+            </ul>
+        </section>
 
+        <section>
+            <h3>Cursos Técnicos</h3>
+            <ul>
+                <li>Técnico em Administração</li>
+                <li>Técnico em Desenvolvimento de Sistemas</li>
+                <li>Técnico em Eletrotécnica</li>
+                <li>Técnico em Eletrônica</li>
+                <li>Técnico em Informática</li>
+                <li>Técnico em Refrigeração e Climatização</li>
+                <li>Técnico em Sistemas de Energia Renovável</li>
+                <li>Para saber mais acesse a página de <a
+                        href="https://www.ifpi.edu.br/catalogo-de-cursos/cursos-tecnicos">cursos técnicos</a></li>
+            </ul>
+        </section>
+    </div>
     <footer>
         <p>&copy; 2024 Instituto Federal do Piauí - Todos os direitos reservados</p>
     </footer>
