--- a/WEB/AV2/sobre.html
+++ b/WEB/AV2/sobre.html
@@ -33,12 +33,11 @@
             <p><strong>Endereço: </strong>Avenida Presidente Jânio Quadros, 330, 64053-390, Santa Isabel, Teresina (PI).
             </p>
             <p><strong>Horário de funcionamento: </strong> das 8h às 12h e das 14h às 18h, de segunda a sexta-feira.</p>
-            <h4><u>Campi</u></h3>
-                <p><strong>Nossos Campi: </strong>O Instituto Federal do Piauí é uma instituição de educação superior,
-                    básica e profissional, pluricurricular e multicampi e descentralizada. Tem como sedes, para os fins
-                    da legislação educacional, as seguintes unidades:</p>
-                <img src="https://www.ifpi.edu.br/a-instituicao/campi/campi/@@collective.cover.banner/a3e9c4fd-4a55-44e3-9303-0f321a78c9c6/@@images/32fdc285-3615-42bb-b3b8-b54c607a09d8.png"
-                    alt="Campi IFPI">
+        <h4><u>Campi</u></h3>
+            <p><strong>Nossos Campi: </strong>O Instituto Federal do Piauí é uma instituição de educação superior,
+            básica e profissional, pluricurricular e multicampi e descentralizada. Tem como sedes, para os fins
+            da legislação educacional, as seguintes unidades:</p>
+            <img src="https://www.ifpi.edu.br/a-instituicao/campi/campi/@@collective.cover.banner/a3e9c4fd-4a55-44e3-9303-0f321a78c9c6/@@images/32fdc285-3615-42bb-b3b8-b54c607a09d8.png" alt="Campi IFPI">
     </section>
 
     <footer>
