--- a/WEB/AV2/cursos.html
+++ b/WEB/AV2/cursos.html
@@ -26,14 +26,18 @@
 
 
     <section class="banner">
-        <h2>Esses são os cursos da Área de Tecnologia oferecidos pelo Instituto Federal do Piauí</h2>
+        <h2>Cursos da Área de Tecnologia do Instituto Federal do Piauí</h2>
         <br>
-        <h4>Cursos encontrados no Campus Teresina Central</h4>
+        <h4></h4>
+    </section>
+
+    <section id="texto_centralizado">
+        <p>Cursos oferecidos no Campus Teresina Central</p>
     </section>
 
     <div class="tipo_cursos">
         <section>
-            <h3>Cursos Superiores</h3>
+            <h3><u>Cursos Superiores</u></h3>
             <ul>
                 <li>Alimentos</li>
                 <li>Análise e Desenvolvimento de Sistemas</li>
@@ -48,7 +52,7 @@
         </section>
 
         <section>
-            <h3>Cursos Técnicos</h3>
+            <h3><u>Cursos Técnicos</u></h3>
             <ul>
                 <li>Técnico em Administração</li>
                 <li>Técnico em Desenvolvimento de Sistemas</li>
