--- a/WEB/AV2/index.html
+++ b/WEB/AV2/index.html
@@ -21,22 +21,27 @@
             </ul>
         </nav>
     </header>
-    
+
     <section class="banner">
+        <img src="https://www.ifpi.edu.br/topo_ifpi.png" alt="Logo IFPI">
         <h2>Bem-vindo ao Instituto Federal do Piauí</h2>
+        <img src="https://www.ifpi.edu.br/topo_ifpi.png" alt="Logo IFPI">
+    </section>
+
+    <section id="texto_centralizado">
         <p>Excelência em ensino, pesquisa e extensão</p>
     </section>
     
     <section class="info">
         <div class="box">
             <h2>Cursos</h2>
-            <p>Conheça os diversos cursos oferecidos pelo IFPI.</p>
-            <a href="cursos.html" class="btn">Saiba mais</a>
+            <p>Conheça os diversos cursos da Área de Tecnologia oferecidos pelo IFPI.</p>
+            <a href="cursos.html" class="btn">Lista de cursos</a>
         </div>
         <div class="box">
             <h2>Notícias</h2>
-            <p>Acompanhe as últimas notícias e eventos do IFPI.</p>
-            <a href="noticias.html" class="btn">Saiba mais</a>
+            <p>Acompanhe as notas e faltas do seu curso. Aprenda mais sobre o SUAP</p>
+            <a href="suap.html" class="btn">Página do SUAP</a>
         </div>
     </section>
 
