--- a/WEB/AV2/index.html
+++ b/WEB/AV2/index.html
@@ -39,7 +39,7 @@
             <a href="cursos.html" class="btn">Lista de cursos</a>
         </div>
         <div class="box">
-            <h2>Notícias</h2>
+            <h2>Portal Acadêmico</h2>
             <p>Acompanhe as notas e faltas do seu curso. Aprenda mais sobre o SUAP</p>
             <a href="suap.html" class="btn">Página do SUAP</a>
         </div>
