--- a/WEB/AV2/sobre.html
+++ b/WEB/AV2/sobre.html
@@ -33,7 +33,10 @@
             <p><strong>Endereço: </strong>Avenida Presidente Jânio Quadros, 330, 64053-390, Santa Isabel, Teresina (PI).
             </p>
             <p><strong>Horário de funcionamento: </strong> das 8h às 12h e das 14h às 18h, de segunda a sexta-feira.</p>
+            <p><strong>Email: </strong>reitoria@ifpi.edu.br</p>
         <h4><u>Campi</u></h3>
+            <p><strong>Email Campus Teresina Central: </strong>teresina.central@ifpi.edu.br
+            </p>
             <p><strong>Nossos Campi: </strong>O Instituto Federal do Piauí é uma instituição de educação superior,
             básica e profissional, pluricurricular e multicampi e descentralizada. Tem como sedes, para os fins
             da legislação educacional, as seguintes unidades:</p>
