--- a/WEB/AV2/suap.html
+++ b/WEB/AV2/suap.html
@@ -25,7 +25,7 @@
     </header>
 
     <section class="banner">
-        <h2>Essa página do Instituto Federal do Piauí é dedicada ao acesso do Portal do Aluno (SUAP)</h2>
+        <h2>Essa página do Instituto Federal do Piauí é dedicada ao acesso do Portal Acadêmico (SUAP)</h2>
         <img src="https://suap.ifpi.edu.br/static/comum/img/logo-login.svg" alt="">
     </section>
 
