--- a/WEB/AV2/contato.html
+++ b/WEB/AV2/contato.html
@@ -26,7 +26,7 @@
 
     <section class="banner">
         <h2>Contatos</h2>
-        <img src="https://www.ifpi.edu.br/topo_ifpi.png" alt="">
+        <img src="https://www.ifpi.edu.br/topo_ifpi.png" alt="Logo do IFPI">
     </section>
 
     <section>
