--- a/WEB/AV2/contato.html
+++ b/WEB/AV2/contato.html
@@ -29,7 +29,7 @@
         <img src="https://www.ifpi.edu.br/topo_ifpi.png" alt="Logo do IFPI">
     </section>
 
-    <section>
+    <section id="texto_centralizado">
         <p>Para entrar em contato com o Instituto Federal do Piauí, acesse o <a href="https://www.ifpi.edu.br/">site oficial</a> ou ligue para o número (86)3131-1400</p>
     </section>
 
