--- a/WEB/AV2/cursos.html
+++ b/WEB/AV2/cursos.html
@@ -28,7 +28,6 @@
     <section class="banner">
         <h2>Cursos da Área de Tecnologia do Instituto Federal do Piauí</h2>
         <br>
-        <h4></h4>
     </section>
 
     <section id="texto_centralizado">
@@ -37,6 +36,9 @@
 
     <div class="tipo_cursos">
         <section>
+            <a href="https://www.ifpi.edu.br/catalogo-de-cursos/cursos-superiores"></a>
+                <img src="https://www.ifpi.edu.br/catalogo-de-cursos/imgcatalogosuperiores.jpeg/@@images/e54ca30e-ec75-45b0-9a26-6375bf03ae75.jpeg" alt="Cursos Superiores">
+            </a>
             <h3><u>Cursos Superiores</u></h3>
             <ul>
                 <li>Alimentos</li>
@@ -52,6 +54,9 @@
         </section>
 
         <section>
+            <a href="https://www.ifpi.edu.br/catalogo-de-cursos/cursos-tecnicos">
+                <img src="https://www.ifpi.edu.br/catalogo-de-cursos/imgcatalogotecnicos.jpeg/@@images/d550555a-3992-440c-89a0-9d40cd0bbb7d.jpeg" alt="Cursos Técnicos">
+            </a>
             <h3><u>Cursos Técnicos</u></h3>
             <ul>
                 <li>Técnico em Administração</li>
