--- a/PFE/AV1/portfolio.html
+++ b/PFE/AV1/portfolio.html
@@ -16,6 +16,8 @@
     
     <main>
       <button>Projetos - Lucas Batista</button>
+
+      <p>No meu portfólio, desenvolvi dois projetos que destacam minhas habilidades práticas: um sistema CRUD para controle de estoque, ideal para pequenas empresas e trabalhadores informais que precisam organizar seus negócios; e uma réplica do site do IFPI, com as principais páginas, cursos, informações de contato, localização e detalhes sobre os campi no estado do Piauí.</p>
     
       <div class="image-container">
         <figure>
