--- a/EMP/ControleEstoque/login_teste copy.html
+++ b/EMP/ControleEstoque/login_teste copy.html
@@ -1,43 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
-    <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rei do Salgado Teresina </title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
-    <title>Exclusão de Produto</title>
   </head>
   <body>
-    
-    <div class="container">
-        <div class="row">
-           <?php
-           include "conexao.php";
-
-           $id = $_POST['id'];
-           $nome_produto = $_POST['nome_produto'];
-
-           $sql = "DELETE from ControleEstoque WHERE cod_produto = $id";
-
-          if (mysqli_query($conn,$sql)){
-            mensagem("$nome_produto EXCLUÍDO COM SUCESSO!", 'success');
-          }
-          else
-            mensagem("$nome_produto NÃO EXCLUÍDO.", 'danger');
-           ?>
-          <br>
-          <a href="welcome.php"><button type="button" class="btn btn-primary">Voltar</button></a>
-
+    <main style="width: 500px; margin: 200px auto;">
+        <div class="mb-3">
+            <label for="usuario">Usuário</label>
+            <input type="text" id="usuario" class="form-control">
         </div>
-    </div>
+
+        <div class="mb-3">
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" class="form-control">
+        </div>
+
+        <div class="mb-3">
+            <button class="btn btn-success form-control" id="btnLogar">Logar</button>
+        </div>
+    </main>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="valida.js"></script>
   </body>
 </html>
