--- a/PFE/AV2/portfolio.html
+++ b/PFE/AV2/portfolio.html
@@ -44,15 +44,12 @@
         </figure>
       </div>
       <a href="index.html"><button class="btn">Voltar para página inicial</button></a>
-      <a href="contato.html">
-      <a href="contato.html" class="contact-btn">Contato</a>
+      <br><br><br>
+      <a href="contato.html" class="btn">Contato</a>
 
-    </a>
-    
-   
+    </a>  
 
     </main>
-    
 
     <footer>
       <h3>IFPI 2025</h3>
